ds-pod.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-ds
spec:
  selector:
    matchLabels:
      app: fluentd-app
  template:
    metadata:
      labels:
        app: fluentd-app
    spec:
      containers:
      - name: fluentd-ctr
        image: fluent/fluentd
