emp-vol-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-vol-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: emp-app
  template:
    metadata:
      labels:
        app: emp-app
    spec:
      containers:
      - name: con1
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: myvol
          mountPath: /data
      - name: con2
        image: tomcat:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: myvol
          mountPath: /data
      volumes:
      - name: myvol
        emptyDir: {}
