hostpath-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostvol-pod
spec:
  containers:
  - name: ng
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: empvol
      mountPath: /data
  - name: tom
    image: tomcat:latest
    ports:
    - containerPort: 8080
    volumeMounts:
    - name: empvol
      mountPath: /data
  volumes:
  - name: empvol
    hostPath:
      path: /data
