httpd-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-pod
  labels:
    app: myapp
    env: prod
spec:
  containers:
  - name: httpd-container
    image: httpd
    ports:
      - containerPort: 80
