init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-container
spec:
  containers:
  - name: app
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: shared-vol
      mountPath: /usr/share/nginx/html/
  volumes:
  - name: shared-vol
    emptyDir: {}
