pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mypod1
spec:
  containers:
  - image: nginx
    name: con1
    ports:
    - containerPort: 80
  nodeName: node5
