res-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mypod1
spec:
  containers:
  - image: nginx
    name: con1
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  - image: tomcat
    name: con2
    ports:
    - containerPort: 8080
