sch-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: scheduler-test
spec:
  schedulerName: my-scheduler
  containers:
  - name: web
    image: httpd
    ports:
    - name: web
      containerPort: 80
      protocol: TCP
