svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: testpod-svc
spec:
  type: NodePorti
  selector:
    app: myapp
  ports:
  - port: 80
